force-app/main/default/objects/simpli_lv__List_View_Config__c/simpli_lv__List_View_Config__c.object-meta.xml
<CustomObject>
    <label>List View Config</label>
    <nameField>
        <label>List View API Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>List View Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>