force-app/main/default/objects/simpli_lv__List_View_Config__c/fields/simpli_lv__List_View_Label__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__List_View_Label__c</fullName>
    <label>List View Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>