force-app/main/default/objects/simpli_lv__List_View_Config__c/fields/simpli_lv__List_View_Object__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__List_View_Object__c</fullName>
    <description>Indicates the list view SFDC object that this list view config is associated with.</description>
    <inlineHelpText>Indicates the list view SFDC object that this list view config is associated with.</inlineHelpText>
    <label>List View Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>