force-app/main/default/objects/simpli_lv__List_View_Config__c/fields/simpli_lv__Primary_Key__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Primary_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Primary Key</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>