force-app/main/default/objects/simpli_lv__List_View_Config__c/listViews/simpli_lv__All.listView-meta.xml
<ListView>
    <fullName>simpli_lv__All</fullName>
    <columns>NAME</columns>
    <columns>simpli_lv__List_View_Label__c</columns>
    <columns>simpli_lv__List_View_Object__c</columns>
    <columns>simpli_lv__Primary_Key__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>